# SCMS

./: pyproject.toml
src/scms/: __init__.py  agent.py  main.py  test-agent.py
src/scms/DB/: db.py  methods.py  models.py  tables.py  test_insert.py
src/scms/instructions/: instructions.py
src/scms/models/: inventory.py
src/scms/tools/: tools.py
