[project]
name = "scms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah-1121", email = "muhmmad11abdullah21@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "langsmith>=0.4.4",
    "openai-agents>=0.1.0",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "weave>=0.51.54",
]

[project.scripts]
scms = "scms:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
